--- a/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
+++ b/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
@@ -17,4 +17,5 @@
     <viewmodels:SetWeddingInfoVM x:Key="setWeddingInfoVM"></viewmodels:SetWeddingInfoVM>
     <viewmodels:WeddingDetailVM x:Key="weddingDetailVM"></viewmodels:WeddingDetailVM>
     <viewmodels:MenuVM x:Key="menuVM"></viewmodels:MenuVM>
+    <viewmodels:ServiceVM x:Key="serviceVM"></viewmodels:ServiceVM>
 </ResourceDictionary>
