--- a/WeddingApp/WeddingApp/Views/WeddingDetailWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/WeddingDetailWindow.xaml
@@ -46,7 +46,7 @@
                     <Grid Grid.Row="1" HorizontalAlignment="Stretch"
                                 Margin="20">
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="90" />
+                            <RowDefinition Height="120" />
                             <RowDefinition  Height="*" />
                         </Grid.RowDefinitions>
                         <Grid HorizontalAlignment="Stretch">
@@ -55,46 +55,52 @@
                                 <ColumnDefinition Width="1*" />
                                 <ColumnDefinition Width="1*" />
                             </Grid.ColumnDefinitions>
+                            
                             <StackPanel Grid.Column="0" Background="Transparent">
+                                
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Tên chú rễ: " FontSize="15" Margin="5" />
-                                    <TextBlock Text="{Binding Receipt.ID_}" FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtGroom"/>
+                                    <TextBlock  FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtGroom"/>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Tên cô dâu: " FontSize="15" Margin="5" />
-                                    <TextBlock Text="{Binding Receipt.USER.FULLNAME_}" FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtBride"/>
+                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtBride"/>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Điện thoại:" FontSize="15" Margin="5" />
-                                    <TextBlock Text="{Binding Receipt.DATE_, StringFormat={} {0:dd/MM/yyyy HH:mm}}" FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtPhone"/>
+                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtPhone"/>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBlock Text="Mã tiệc cưới: " FontSize="15" Margin="5" />
+                                    <TextBlock  FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtWeddingID"/>
                                 </StackPanel>
                             </StackPanel>
                             <StackPanel Grid.Column="1">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Ngày đãi tiệc: " FontSize="15" Margin="5" />
-                                    <TextBlock Text="{Binding Receipt.ID_, StringFormat={} {0:dd/MM/yyyy HH:mm}}" FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtWeddingDate"/>
+                                    <TextBlock  FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtWeddingDate"/>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Ca: " FontSize="15" Margin="5" />
-                                    <TextBlock Text="{Binding Receipt.USER.FULLNAME_}" FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtShift"/>
+                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtShift"/>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Sảnh: " FontSize="15" Margin="5" />
-                                    <TextBlock Text="{Binding Receipt.DATE}" FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtHall"/>
+                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtHall"/>
                                 </StackPanel>
                             </StackPanel>
                             <StackPanel Grid.Column="2">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Tiền đặt cọc: " FontSize="15" Margin="5" />
-                                    <TextBlock Text="{Binding Receipt.ID_}" FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtDeposit"/>
+                                    <TextBlock  FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtDeposit"/>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Số lượng bàn: " FontSize="15" Margin="5" />
-                                    <TextBlock Text="{Binding Receipt.USER.FULLNAME_}" FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtTableAmount"/>
+                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtTableAmount"/>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Số bàn dự trữ: " FontSize="15" Margin="5" />
-                                    <TextBlock Text="{Binding Receipt.DATE_, StringFormat={} {0:dd/MM/yyyy HH:mm}}" FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtReserve"/>
+                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtReserve"/>
                                 </StackPanel>
                             </StackPanel>
                         </Grid>
